fixed layout issues

--- a/style/style.css
+++ b/style/style.css
@@ -17,9 +17,10 @@ body {
   border-radius: 30px;
   padding: 10px;
   box-shadow: 5px 5px 10px gray;
-  width: 700px;
+  width: 600px;
+  height: 500px;
   min-width: 33vh;
-  min-height: 50vh;
+  min-height: 500px;
 }
 
 .card2 {
@@ -34,13 +35,24 @@ body {
   height: 500px;
 }
 /* Nav bar appearance */
+header {
+  padding: 10px;
+  padding-right: 100px;
+  padding-left: 10px;
+  padding-bottom: 10px;
+  align-items: center;
+}
 
 nav p {
-    display: flexbox;
+  text-align: center;
+
+  display: inline-block;
   justify-content: right;
   font-size: 18px;
-  font-weight: 100;
+  font-weight: bold;
   color: #282828;
+  margin: 10px;
+
 }
 
 /* Top Section */
@@ -67,32 +79,33 @@ h1 {
 }
 
 /* "Skill(s)" Section */
-.languages {
+section .languages {
   display: flexbox;
-  height: 20vh;
+  position: relative;
+  height: 50vh;
 }
 
 .languages img {
-  display: flexbox;
   justify-content: space-between;
-  position: relative;
-  background-color: none;
-
-  height: 50px;
-  width: 50px;
+  height: 20%;
+  width: 20%;
 }
 
 .languages p {
   display: flexbox;
-  position: absolute;
   font-size: 100px;
   font-weight: bolder;
   opacity: 20%;
 }
 
 /* Location */
-#map img {
-   object-fit: fill;
+#map section {
+  display: flexbox;
+  height: 50vh;
+}
+#map h1 {
+  opacity: 20%;
+  text-align: center;
 }
 
 /* Works Card */
